# tte-screensaver

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml  renovate.json  requirements.txt  run.py
.github/workflows/: dependabot-auto-merge.yml  release.yml
assets/: default_ascii.txt
src/: __init__.py  config.py  config_dialog.py  effects.py  main.py  renderer.py  screensaver.py
